[gd_scene load_steps=15 format=3 uid="uid://bh1ng7g7y3qmd"]

[ext_resource type="Texture2D" uid="uid://dh0dfdwkk5nco" path="res://assets/art/player.png" id="2_0vajj"]
[ext_resource type="Script" path="res://Player.gd" id="3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1ujr"]
size = Vector2(28, 33)

[sub_resource type="Animation" id="Animation_yj4f2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(4, 4)]
}

[sub_resource type="Animation" id="Animation_8l0un"]
resource_name = "crouch"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [24]
}

[sub_resource type="Animation" id="Animation_b43sm"]
resource_name = "crouch_walk"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_okrcm"]
resource_name = "fall"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_h7ro3"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_340gb"]
resource_name = "jump"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_ec7in"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_u5k22"]
resource_name = "stride"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(10, 4), Vector2i(11, 4), Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5)]
}

[sub_resource type="Animation" id="Animation_pc6wr"]
resource_name = "walk"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jd1q"]
_data = {
"RESET": SubResource("Animation_yj4f2"),
"crouch": SubResource("Animation_8l0un"),
"crouch_walk": SubResource("Animation_b43sm"),
"fall": SubResource("Animation_okrcm"),
"idle": SubResource("Animation_h7ro3"),
"jump": SubResource("Animation_340gb"),
"shoot": SubResource("Animation_ec7in"),
"stride": SubResource("Animation_u5k22"),
"walk": SubResource("Animation_pc6wr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7sjv"]
size = Vector2(33, 25)

[node name="Player" type="CharacterBody2D"]
position = Vector2(235, 308)
script = ExtResource("3")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(2, 3)
texture = ExtResource("2_0vajj")
hframes = 12
vframes = 6
frame = 11

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_s1ujr")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_left = -10000006

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1jd1q")
}

[node name="PlayerCrouchHitbox" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 3.5)
shape = SubResource("RectangleShape2D_v7sjv")
